<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#00000000" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:focusable="true" android:focusableInTouchMode="true" android:id="@+id/step1_box" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_width="fill_parent">
        <RelativeLayout android:background="@drawable/bg_stepcontent" android:id="@+id/step1_basicinfolayout" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_width="fill_parent" android:padding="10.0dip">
            <ImageView android:id="@+id/step1_reginicon" android:layout_height="45.0dip" android:layout_marginRight="5.0dip" android:layout_width="wrap_content" android:src="@drawable/icon_round" style="@style/img_basic" />
            <TextView android:id="@+id/step1_regin" android:layout_height="45.0dip" android:layout_toRightOf="@+id/step1_reginicon" android:layout_width="wrap_content" android:text="@string/text_region" style="@style/text17sp_left" />
            <Spinner android:background="@drawable/bg_spinner" android:id="@+id/step1_regionspinner" android:layout_height="45.0dip" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@+id/step1_regin" android:layout_width="fill_parent" />
            <ImageView android:id="@+id/step1_telnoicon" android:layout_below="@+id/step1_reginicon" android:layout_height="45.0dip" android:layout_marginRight="5.0dip" android:layout_marginTop="5.0dip" android:layout_width="wrap_content" android:src="@drawable/icon_round" style="@style/img_basic" />
            <TextView android:id="@+id/step1_telno" android:layout_below="@+id/step1_regin" android:layout_height="45.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@+id/step1_telnoicon" android:layout_width="wrap_content" android:text="@string/text_tel" style="@style/text17sp_left" />
            <EditText android:background="@drawable/bg_edit_default" android:clickable="false" android:focusable="false" android:focusableInTouchMode="false" android:id="@+id/step1_teledit" android:inputType="number" android:layout_below="@+id/step1_regin" android:layout_height="45.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@+id/step1_telno" android:layout_width="fill_parent" style="@style/text17sp_left" />
        </RelativeLayout>
        <RelativeLayout android:background="@drawable/bg_stepcontent" android:id="@+id/step1_provisionlayout" android:layout_below="@+id/step1_basicinfolayout" android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="10.0dip">
            <CheckBox android:button="@drawable/btn_chkbox" android:id="@+id/step1_allprovisionchk" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/chk_allprovision" style="@style/text17sp_center" />
            <ImageView android:id="@+id/step1_provisionicon" android:layout_alignBottom="@+id/step1_allprovisionchk" android:layout_alignParentLeft="true" android:layout_alignTop="@+id/step1_allprovisionchk" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_width="wrap_content" android:src="@drawable/icon_round" style="@style/img_basic" />
            <TextView android:id="@+id/step1_provision" android:layout_alignBottom="@+id/step1_allprovisionchk" android:layout_alignTop="@+id/step1_allprovisionchk" android:layout_height="wrap_content" android:layout_toRightOf="@+id/step1_provisionicon" android:layout_width="wrap_content" android:text="@string/text_provision" style="@style/text17sp_center" />
            <LinearLayout android:id="@+id/step1_provisionlistlayout" android:layout_below="@+id/step1_allprovisionchk" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
                <RelativeLayout android:id="@+id/step1_servicelayout" android:layout_height="0.0dip" android:layout_marginBottom="5.0dip" android:layout_marginTop="5.0dip" android:layout_weight="1.0" android:layout_width="fill_parent">
                    <CheckBox android:button="@drawable/btn_chkbox" android:id="@+id/step1_servicechk" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/step1_servicebtn" android:layout_width="wrap_content" android:text="@string/chk_service" style="@style/text17sp_left" />
                    <Button android:background="@drawable/btn_provision_on" android:id="@+id/step1_servicebtn" android:layout_alignBottom="@+id/step1_servicechk" android:layout_alignParentRight="true" android:layout_alignTop="@+id/step1_servicechk" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/text_detail" style="@style/text17sp_center" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/step1_locationlayout" android:layout_height="0.0dip" android:layout_marginBottom="5.0dip" android:layout_marginTop="5.0dip" android:layout_weight="1.0" android:layout_width="fill_parent">
                    <CheckBox android:button="@drawable/btn_chkbox" android:id="@+id/step1_locationchk" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/step1_locationbtn" android:layout_width="wrap_content" android:text="@string/chk_location" style="@style/text17sp_left" />
                    <Button android:background="@drawable/btn_provision_on" android:id="@+id/step1_locationbtn" android:layout_alignBottom="@+id/step1_locationchk" android:layout_alignParentRight="true" android:layout_alignTop="@+id/step1_locationchk" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/text_detail" style="@style/text17sp_center" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/step1_infolayout" android:layout_height="0.0dip" android:layout_marginBottom="5.0dip" android:layout_marginTop="5.0dip" android:layout_weight="1.0" android:layout_width="fill_parent">
                    <CheckBox android:button="@drawable/btn_chkbox" android:id="@+id/step1_infochk" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/step1_infobtn" android:layout_width="wrap_content" android:text="@string/chk_info" style="@style/text17sp_left" />
                    <Button android:background="@drawable/btn_provision_on" android:id="@+id/step1_infobtn" android:layout_alignBottom="@+id/step1_infochk" android:layout_alignParentRight="true" android:layout_alignTop="@+id/step1_infochk" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/text_detail" style="@style/text17sp_center" />
                </RelativeLayout>
                <RelativeLayout android:id="@+id/step1_trialoguelayout" android:layout_height="0.0dip" android:layout_marginTop="5.0dip" android:layout_weight="1.0" android:layout_width="fill_parent">
                    <CheckBox android:button="@drawable/btn_chkbox" android:id="@+id/step1_trialoguechk" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/step1_trialoguebtn" android:layout_width="wrap_content" android:text="@string/chk_trialogue" style="@style/text17sp_left" />
                    <Button android:background="@drawable/btn_provision_on" android:id="@+id/step1_trialoguebtn" android:layout_alignBottom="@+id/step1_trialoguechk" android:layout_alignParentRight="true" android:layout_alignTop="@+id/step1_trialoguechk" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/text_detail" style="@style/text17sp_center" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:layout_below="@+id/step1_provisionlayout" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:paddingBottom="10.0dip">
            <TextView android:layout_height="wrap_content" android:layout_weight="16.0" android:layout_width="0.0dip" />
            <Button android:id="@+id/step1_nextbtn" android:layout_weight="31.0" android:text="@string/btn_next_text" style="@style/step_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:layout_height="wrap_content" android:layout_weight="16.0" android:layout_width="0.0dip" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
