<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#0000" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_gravity="center_horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp">
        <RelativeLayout android:id="@+id/step2_infolayout" android:background="@drawable/bg_stepcontent" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@+id/step2_cardcheck" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:button="@drawable/btn_chkbox" android:text="@string/text_cardinfo" style="$style/text17sp_center"/>
            <TextView android:id="@+id/step2_etc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/text_step2etc" android:layout_below="@+id/step2_cardcheck" style="$style/text14sp_left"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/step2_cardinfolayout" android:background="@drawable/bg_stepcontent" android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/step2_infolayout">
            <ImageView android:id="@+id/step2_typeicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:src="@drawable/icon_round" style="@style/img_basic"/>
            <TextView android:id="@+id/step2_type" android:layout_width="90dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/text_cardtype" android:layout_toRightOf="@+id/step2_typeicon" style="@style/text17sp_left"/>
            <Spinner android:id="@+id/step2_typespinner" android:background="@drawable/bg_spinner" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginBottom="5dp" android:layout_toRightOf="@+id/step2_type"/>
            <ImageView android:id="@+id/step2_numicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:src="@drawable/icon_round" android:layout_below="@+id/step2_typeicon" style="@style/img_basic"/>
            <TextView android:id="@+id/step2_num" android:layout_width="90dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/text_cardnum" android:layout_toRightOf="@+id/step2_numicon" android:layout_below="@+id/step2_type" style="@style/text17sp_left"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/step2_numbox" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginBottom="5dp" android:layout_toRightOf="@+id/step2_num" android:layout_below="@+id/step2_typespinner">
                <EditText android:id="@+id/step2_num1edit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="2dp" android:singleLine="true" android:maxLength="4" android:layout_weight="1" android:inputType="number" style="@style/number_type"/>
                <EditText android:id="@+id/step2_num2edit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="2dp" android:singleLine="true" android:maxLength="4" android:layout_weight="1" android:inputType="number" style="@style/number_type"/>
                <EditText android:id="@+id/step2_num3edit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="2dp" android:singleLine="true" android:maxLength="4" android:layout_weight="1" android:inputType="numberPassword" style="@style/number_type"/>
                <EditText android:id="@+id/step2_num4edit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="match_parent" android:singleLine="true" android:maxLength="4" android:layout_weight="1" android:inputType="numberPassword" style="@style/number_type"/>
            </LinearLayout>
            <ImageView android:id="@+id/step2_peroidicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:src="@drawable/icon_round" android:layout_below="@+id/step2_numicon" style="@style/img_basic"/>
            <TextView android:id="@+id/step2_period" android:layout_width="90dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/text_cardperiod" android:layout_toRightOf="@+id/step2_peroidicon" android:layout_below="@+id/step2_num" style="@style/text17sp_left"/>
            <LinearLayout android:id="@+id/peroidlayout" android:padding="0dp" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginBottom="5dp" android:weightSum="30" android:layout_toRightOf="@+id/step2_period" android:layout_below="@+id/step2_num">
                <EditText android:id="@+id/step2_monthedit" android:background="@drawable/bg_edit" android:layout_width="50dp" android:layout_height="match_parent" android:maxLength="2" android:layout_weight="9" android:inputType="numberPassword" style="@style/number_type"/>
                <TextView android:id="@+id/step_monthtext" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/text_month" android:layout_weight="1" style="@style/text17sp_center"/>
                <EditText android:id="@+id/step2_yearedit" android:background="@drawable/bg_edit" android:layout_width="50dp" android:layout_height="match_parent" android:maxLength="2" android:layout_weight="9" android:inputType="numberPassword" style="@style/number_type"/>
                <TextView android:id="@+id/step2_yeartext" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/text_year" android:layout_weight="1" style="@style/text17sp_center"/>
            </LinearLayout>
            <ImageView android:id="@+id/step2_nameicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:src="@drawable/icon_round" android:layout_below="@+id/step2_peroidicon" style="@style/img_basic"/>
            <TextView android:id="@+id/step2_name" android:layout_width="90dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/text_cardname" android:layout_toRightOf="@+id/step2_nameicon" android:layout_below="@+id/step2_period" style="@style/text17sp_left"/>
            <Spinner android:id="@+id/step2_ownergubunspinner" android:background="@drawable/bg_spinner" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_toRightOf="@+id/step2_name" android:layout_below="@+id/step2_period"/>
            <EditText android:id="@+id/step2_ownernmedit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="2dp" android:maxLength="50" android:layout_toRightOf="@+id/step2_ownergubunspinner" android:layout_below="@+id/step2_period" android:inputType="text" style="@style/text17sp_left"/>
            <ImageView android:id="@+id/step2_emailicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:src="@drawable/icon_round" android:layout_below="@+id/step2_nameicon" style="@style/img_basic"/>
            <TextView android:id="@+id/step2_email" android:layout_width="90dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:text="@string/text_email" android:maxLength="50" android:layout_toRightOf="@+id/step2_emailicon" android:layout_below="@+id/step2_name" style="@style/text17sp_left"/>
            <EditText android:id="@+id/step2_emailedit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="45dp" android:layout_toRightOf="@+id/step2_email" android:layout_below="@+id/step2_period" android:layout_alignTop="@+id/step2_email" android:layout_alignBottom="@+id/step2_email" android:inputType="textEmailAddress" style="@style/text17sp_left"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/step2_btnlayout" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/step2_cardinfolayout">
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="2"/>
            <Button android:id="@+id/step2_prvebtn" android:text="@string/btn_prev_text" android:layout_weight="8" style="@style/step_prev_button"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <Button android:id="@+id/step2_nextbtn" android:text="@string/btn_next_text" android:layout_weight="8" style="@style/step_next_button"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
