<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#0000" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_gravity="center_horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
        <RelativeLayout android:id="@+id/step3_etclayout" android:background="@drawable/bg_stepcontent" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/step3_etc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" style="@style/text14sp_left"/>
            <ImageView android:id="@+id/step3_recommedicon" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:src="@drawable/icon_round" android:layout_below="@+id/step3_etc" style="@style/img_basic"/>
            <TextView android:id="@+id/step3_recommed" android:layout_width="80dp" android:layout_height="45dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:text="@string/text_recommend" android:layout_toRightOf="@+id/step3_recommedicon" android:layout_below="@+id/step3_etc" style="@style/text17sp_left"/>
            <EditText android:id="@+id/step3_recommededit" android:background="@drawable/bg_edit" android:layout_width="match_parent" android:layout_height="45dp" android:maxLength="20" android:layout_toRightOf="@+id/step3_recommed" android:layout_below="@+id/step3_etc" android:inputType="number" style="@style/number_type"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/step3_btnlayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/step3_etclayout">
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="2"/>
            <Button android:id="@+id/step3_prvebtn" android:text="@string/btn_prev_text" android:layout_weight="8" style="@style/step_prev_button"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <Button android:id="@+id/step3_compbtn" android:text="@string/btn_comp_text" android:layout_weight="8" style="@style/step_next_button"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
